mingle/test/gauge/smokeTests/libs/com.thoughtworks.twist.driver.sahi_3.0.0.13132-b6ff0d9ea3753c/sahi/userdata/scripts/demo/shouldfail/set_recovery.sah
_include ("../if_include.sah");
function recover(){
	_click(_link("Back"));
	_click(_link("Link Test"));
	_click(_link("Back"));
}

_setRecovery(recover);
_click(_link("Form Test"));
_click(_link("Link Test"));
